Image vertical alignment fixed

--- a/source/stylesheets/theme.scss
+++ b/source/stylesheets/theme.scss
@@ -57,6 +57,47 @@ a.youtube {
   text-align: center;
 }
 
+.text-ruby {
+
+  display:inline-block;
+  vertical-align:middle;
+}
+
+.logoandtext {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.box {
+  float: left;
+  width: 50%;
+  padding: 3em 0 3em 0;
+}
+
+@media all and (max-width: 60em) {
+  .box {
+    width: 100%;
+  }
+}
+@media all and (min-width: 60em) {
+  .box{
+    width: 50%;
+  }
+}
+
+.clearfix {
+  display: inline-block;
+}
+
+.clearfix::after {
+    content: "";
+    clear: both;
+    display: table;
+}
+
+
+
 .column {
   float: left;
   width: 16.6%;
